// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`descriptions demos 📸 renders ./packages/descriptions/src/demos/base.tsx correctly 1`] = `
<div
  class="ant-descriptions ant-pro-descriptions"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      <div
        class="ant-pro-core-label-tip"
      >
        高级定义列表
        <span
          aria-label="info-circle"
          class="anticon anticon-info-circle ant-pro-core-label-tip-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="info-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
            <path
              d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      class="ant-descriptions-extra"
    >
      <button
        class="ant-btn ant-btn-primary"
        type="button"
      >
        <span>
          提 交
        </span>
      </button>
    </div>
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                文本
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                这是一段文本
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                <div
                  class="ant-pro-core-label-tip"
                >
                  金额
                  <span
                    aria-label="info-circle"
                    class="anticon anticon-info-circle ant-pro-core-label-tip-icon"
                    role="img"
                  >
                    <svg
                      aria-hidden="true"
                      data-icon="info-circle"
                      fill="currentColor"
                      focusable="false"
                      height="1em"
                      viewBox="64 64 896 896"
                      width="1em"
                    >
                      <path
                        d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
                      />
                      <path
                        d="M464 336a48 48 0 1096 0 48 48 0 10-96 0zm72 112h-48c-4.4 0-8 3.6-8 8v272c0 4.4 3.6 8 8 8h48c4.4 0 8-3.6 8-8V456c0-4.4-3.6-8-8-8z"
                      />
                    </svg>
                  </span>
                </div>
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  ￥ 100
                </span>
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                百分比
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  100.00%
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                选择框
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span
                  class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                >
                  <span
                    class="ant-badge-status-dot ant-badge-status-error"
                  />
                  <span
                    class="ant-badge-status-text"
                  >
                    未解决
                  </span>
                </span>
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                远程选择框
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                已解决
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                进度条
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <div
                  class="ant-progress ant-progress-line ant-progress-status-active ant-progress-show-info ant-progress-small"
                  style="min-width: 100px; max-width: 320px;"
                >
                  <div
                    class="ant-progress-outer"
                  >
                    <div
                      class="ant-progress-inner"
                    >
                      <div
                        class="ant-progress-bg"
                        style="width: 40%; height: 6px;"
                      />
                    </div>
                  </div>
                  <span
                    class="ant-progress-text"
                    title="40%"
                  >
                    40%
                  </span>
                </div>
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                日期时间
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  2016-11-22 00:00:00
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                日期
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  2016-11-22
                </span>
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                日期区间
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <div>
                  <div>
                    2016-11-21 00:00:00
                  </div>
                  <div>
                    2016-11-22 00:00:00
                  </div>
                </div>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                时间
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  00:00:00
                </span>
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                代码块
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <pre
                  class=""
                  style="padding: 16px; overflow: auto; font-size: 85%; line-height: 1.45; background-color: rgb(246, 248, 250); border-radius: 3px;"
                >
                  <code>
                    
yarn run v1.22.0
$ eslint --format=pretty ./packages
Done in 9.70s.
          
                  </code>
                </pre>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                JSON 代码块
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <pre
                  class=""
                  style="padding: 16px; overflow: auto; font-size: 85%; line-height: 1.45; background-color: rgb(246, 248, 250); border-radius: 3px;"
                >
                  <code>
                    {
  "compilerOptions": {
    "target": "esnext",
    "moduleResolution": "node",
    "jsx": "preserve",
    "esModuleInterop": true,
    "experimentalDecorators": true,
    "strict": true,
    "forceConsistentCasingInFileNames": true,
    "noImplicitReturns": true,
    "suppressImplicitAnyIndexErrors": true,
    "declaration": true,
    "skipLibCheck": true
  },
  "include": [
    "**/src",
    "**/docs",
    "scripts",
    "**/demo",
    ".eslintrc.js"
  ]
}
                  </code>
                </pre>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`descriptions demos 📸 renders ./packages/descriptions/src/demos/columns.tsx correctly 1`] = `
<div
  class="ant-descriptions ant-pro-descriptions"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      高级定义列表request columns
    </div>
    <div
      class="ant-descriptions-extra"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center ant-pro-field-option"
      >
        <div
          class="ant-space-item"
          style="margin-right: 16px;"
        >
          <a
            rel="noopener noreferrer"
            target="_blank"
          >
            链路
          </a>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 16px;"
        >
          <a
            rel="noopener noreferrer"
            target="_blank"
          >
            报警
          </a>
        </div>
        <div
          class="ant-space-item"
        >
          <a
            rel="noopener noreferrer"
            target="_blank"
          >
            查看
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                文本
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                这是一段文本columns
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                状态
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span
                  class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                >
                  <span
                    class="ant-badge-status-dot ant-badge-status-default"
                  />
                  <span
                    class="ant-badge-status-text"
                  >
                    全部
                  </span>
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                状态2
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                open
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                时间
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  2020-08-09
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                money
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  ￥ 1212100
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                百分比
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  100.00%
                </span>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`descriptions demos 📸 renders ./packages/descriptions/src/demos/customization-value-type.tsx correctly 1`] = `
Array [
  <input
    style="display: none;"
    type="text"
  />,
  <div
    class="ant-descriptions ant-pro-descriptions"
  >
    <div
      class="ant-descriptions-header"
    >
      <div
        class="ant-descriptions-title"
      >
        自定义 valueType
      </div>
      <div
        class="ant-descriptions-extra"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center ant-pro-field-option"
            >
              <div
                class="ant-space-item"
              >
                <a>
                  刷新
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  链接
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <a>
                        TradeCode 1
                      </a>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        aria-label="edit"
                        class="anticon anticon-edit"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="edit"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="2"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  标签
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <span
                        class="ant-tag"
                      >
                        close
                      </span>
                      <span
                        class="ant-tag"
                      >
                        close
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        aria-label="edit"
                        class="anticon anticon-edit"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="edit"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
]
`;

exports[`descriptions demos 📸 renders ./packages/descriptions/src/demos/data-source.tsx correctly 1`] = `
<div
  class="ant-descriptions ant-pro-descriptions"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      dataSource and columns
    </div>
    <div
      class="ant-descriptions-extra"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center ant-pro-field-option"
      >
        <div
          class="ant-space-item"
          style="margin-right: 16px;"
        >
          <a
            rel="noopener noreferrer"
            target="_blank"
          >
            链路
          </a>
        </div>
        <div
          class="ant-space-item"
          style="margin-right: 16px;"
        >
          <a
            rel="noopener noreferrer"
            target="_blank"
          >
            报警
          </a>
        </div>
        <div
          class="ant-space-item"
        >
          <a
            rel="noopener noreferrer"
            target="_blank"
          >
            查看
          </a>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                文本
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                这是一段文本columns
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                状态
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span
                  class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                >
                  <span
                    class="ant-badge-status-dot ant-badge-status-default"
                  />
                  <span
                    class="ant-badge-status-text"
                  >
                    全部
                  </span>
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                状态2
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                open
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                时间
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  2020-08-09
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                money
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  ￥ 1212100
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                百分比
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  100.00%
                </span>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`descriptions demos 📸 renders ./packages/descriptions/src/demos/editable.tsx correctly 1`] = `
Array [
  <input
    style="display: none;"
    type="text"
  />,
  <div
    class="ant-descriptions ant-pro-descriptions"
  >
    <div
      class="ant-descriptions-header"
    >
      <div
        class="ant-descriptions-title"
      >
        可编辑的定义列表
      </div>
      <div
        class="ant-descriptions-extra"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
          >
            <div
              class="ant-space ant-space-horizontal ant-space-align-center ant-pro-field-option"
            >
              <div
                class="ant-space-item"
                style="margin-right: 16px;"
              >
                <a
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  链路
                </a>
              </div>
              <div
                class="ant-space-item"
                style="margin-right: 16px;"
              >
                <a
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  报警
                </a>
              </div>
              <div
                class="ant-space-item"
              >
                <a
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  查看
                </a>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="ant-descriptions-view"
    >
      <table>
        <tbody>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  文本
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      这是一段文本columns
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        aria-label="edit"
                        class="anticon anticon-edit"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="edit"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  状态
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  <span
                    class="ant-badge ant-badge-status ant-badge-not-a-wrapper"
                  >
                    <span
                      class="ant-badge-status-dot ant-badge-status-default"
                    />
                    <span
                      class="ant-badge-status-text"
                    >
                      全部
                    </span>
                  </span>
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  状态2
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      open
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        aria-label="edit"
                        class="anticon anticon-edit"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="edit"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </td>
          </tr>
          <tr
            class="ant-descriptions-row"
          >
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  时间
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <span>
                        2020-08-09
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        aria-label="edit"
                        class="anticon anticon-edit"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="edit"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  money
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <span>
                        ￥ 1212100
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        aria-label="edit"
                        class="anticon anticon-edit"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="edit"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </td>
            <td
              class="ant-descriptions-item"
              colspan="1"
            >
              <div
                class="ant-descriptions-item-container"
              >
                <span
                  class="ant-descriptions-item-label"
                >
                  百分比
                </span>
                <span
                  class="ant-descriptions-item-content"
                >
                  <div
                    class="ant-space ant-space-horizontal ant-space-align-center"
                  >
                    <div
                      class="ant-space-item"
                      style="margin-right: 8px;"
                    >
                      <span>
                        100.00%
                      </span>
                    </div>
                    <div
                      class="ant-space-item"
                    >
                      <span
                        aria-label="edit"
                        class="anticon anticon-edit"
                        role="img"
                        tabindex="-1"
                      >
                        <svg
                          aria-hidden="true"
                          data-icon="edit"
                          fill="currentColor"
                          focusable="false"
                          height="1em"
                          viewBox="64 64 896 896"
                          width="1em"
                        >
                          <path
                            d="M257.7 752c2 0 4-.2 6-.5L431.9 722c2-.4 3.9-1.3 5.3-2.8l423.9-423.9a9.96 9.96 0 000-14.1L694.9 114.9c-1.9-1.9-4.4-2.9-7.1-2.9s-5.2 1-7.1 2.9L256.8 538.8c-1.5 1.5-2.4 3.3-2.8 5.3l-29.5 168.2a33.5 33.5 0 009.4 29.8c6.6 6.4 14.9 9.9 23.8 9.9zm67.4-174.4L687.8 215l73.3 73.3-362.7 362.6-88.9 15.7 15.6-89zM880 836H144c-17.7 0-32 14.3-32 32v36c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-36c0-17.7-14.3-32-32-32z"
                          />
                        </svg>
                      </span>
                    </div>
                  </div>
                </span>
              </div>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>,
]
`;

exports[`descriptions demos 📸 renders ./packages/descriptions/src/demos/request.tsx correctly 1`] = `
<div
  class="ant-descriptions ant-pro-descriptions"
>
  <div
    class="ant-descriptions-header"
  >
    <div
      class="ant-descriptions-title"
    >
      高级定义列表 request
    </div>
    <div
      class="ant-descriptions-extra"
    >
      <div
        class="ant-space ant-space-horizontal ant-space-align-center"
      >
        <div
          class="ant-space-item"
          style="margin-right: 8px;"
        >
          <div
            class="ant-space ant-space-horizontal ant-space-align-center ant-pro-field-option"
          >
            <div
              class="ant-space-item"
              style="margin-right: 16px;"
            >
              <button
                class="ant-btn ant-btn-primary"
                type="button"
              >
                <span>
                  刷 新
                </span>
              </button>
            </div>
            <div
              class="ant-space-item"
            >
              <button
                class="ant-btn"
                type="button"
              >
                <span>
                  重 置
                </span>
              </button>
            </div>
          </div>
        </div>
        <div
          class="ant-space-item"
        >
          <button
            class="ant-btn ant-btn-link"
            type="button"
          >
            <span>
              修改
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-descriptions-view"
  >
    <table>
      <tbody>
        <tr
          class="ant-descriptions-row"
        >
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                文本
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                这是一段文本
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                日期
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  2020-07-30
                </span>
              </span>
            </div>
          </td>
          <td
            class="ant-descriptions-item"
            colspan="1"
          >
            <div
              class="ant-descriptions-item-container"
            >
              <span
                class="ant-descriptions-item-label"
              >
                money
              </span>
              <span
                class="ant-descriptions-item-content"
              >
                <span>
                  ￥ 12121
                </span>
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
